Fix image overflow of page canvas

--- a/assets/src/blocks/amp-story-page/edit.css
+++ b/assets/src/blocks/amp-story-page/edit.css
@@ -103,7 +103,7 @@
 	letter-spacing: 1px;
 }
 
-.editor-block-list__layout div[data-type="amp/amp-story-page"] .amp-story-page-number + div {
+.editor-block-list__layout div[data-type="amp/amp-story-page"] .amp-story-page-number + div .editor-inner-blocks.block-editor-inner-blocks {
 	height: 543px;
 }
 
